# zeno-build

./: .flake8  .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  CITATION.cff  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  test.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
alpaca-data/: README.md  alpaca.ipynb
docs/: README.md  concepts.md  exploring_results.md  implementing_models.md  running_experiments.md  specifying_parameters.md
docs/tutorial/: 01_visualization.ipynb  02_inference.ipynb  03_text_generation.ipynb  README.md
eleuther_harness/: harness.ipynb
examples/: README.md
examples/analysis_gpt_mt/: .gitignore  README.md  __init__.py  config.py  main.py  modeling.py  requirements.txt
examples/chatbot/: README.md  config.py  main.py  modeling.py  requirements.txt
examples/code_generation/: README.md  __init__.py  config.py  main.py  modeling.py  requirements.txt
examples/eleuther_harness/: README.md  requirements.txt
examples/open_llm_leaderboard/: README.md  drop (1).ipynb  drop.ipynb  hellaswag.ipynb  requirements.txt
examples/rag/: README.md  rag-eval.ipynb  requirements.txt
examples/summarization/: __init__.py  config.py  main.py  modeling.py  requirements.txt
examples/text_classification/: README.md  __init__.py  config.py  main.py  modeling.py  requirements.txt
examples/transcription/: README.md  __init__.py  config.py  main.py  modeling.py  requirements.txt  speech_accent_archive.csv  speech_accent_archive_tiny.csv  transcription.ipynb
examples/tutorial/: 01_visualization_only.py  02_inference.py  03_text_generation.py
llm_compare/: __init__.py  cache_utils.py  cache_utils_test.py  experiment_run.py  search_space.py  version.py  visualize.py
open_llm_leaderboard/: arc.ipynb  drop.ipynb  gsm8k.ipynb  mmlu.ipynb  truthfulqa.ipynb  winogrande.ipynb
tasks/: README.md  concepts.md
taxeval/: README.md  requirements.txt  tax-benchmark.json  taxes.ipynb
transcription/: requirements.txt  speech_accent_archive.csv  transcription.ipynb
zeno_build/: cache_utils.py  cache_utils_test.py  experiment_run.py  visualize.py
(+109 files in other folders)
