[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "llm_compare"
authors = [
    {name = "Alex Cabrera", email = "cabrera@cmu.edu"},
    {name = "Graham Neubig", email = "neubig@gmail.com"},
]
description = "A library for comparing multiple llm-based systems."
readme = "README.md"
repository = "https://github.com/zeno-ml/llm-compare"
requires-python = ">=3.9"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "mypy>=1.2.0",
    "pre-commit>=3.2.0",
    "pytest>=6.0.0", 
]

[tool.hatch.build]
include = [
    "*.py",
]
exclude = [
    "*_test.py",
]
only-packages = true

[tool.hatch.build.targets.wheel]
packages = ["llm_compare"]

[tool.hatch.version]
path = "llm_compare/version.py"

