[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zeno_build"
authors = [
  { name = "Ãngel Alexander Cabrera", email = "alex.cabrera@gmail.com" },
  { name = "Graham Neubig", email = "neubig@gmail.com" },
]
description = "A library for comparing multiple llm-based systems."
readme = "README.md"
repository = "https://github.com/zeno-ml/zeno-build"
requires-python = ">=3.9"
license = { file = "LICENSE" }
classifiers = [
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "aiolimiter>=1.0.0",
  "inspiredco>=0.0.2",
  "openai>=0.27.0",
  "zenoml>=0.6.1",
]
dynamic = ["version"]

[project.optional-dependencies]
test = ["mypy>=1.2.0", "pre-commit>=3.2.0", "pytest>=6.0.0", "black>=23.3.0"]

[tool.hatch.build]
include = ["*.py"]
exclude = ["*_test.py", "tasks/**", "examples/**"]
only-packages = true

[tool.hatch.build.targets.wheel]
packages = ["zeno_build"]

[tool.hatch.version]
path = "zeno_build/version.py"
